k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aqconnecta-backend
  namespace: aqconnecta
  labels:
    app: aqconnecta-backend
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: aqconnecta-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: aqconnecta-backend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        fsGroup: 2000
        fsGroupChangePolicy: OnRootMismatch
      terminationGracePeriodSeconds: 30
      containers:
        - name: backend
          image: docker.io/riume/aqconnecta-backend:20
          imagePullPolicy: IfNotPresent
          workingDir: /tmp
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          resources:
            requests:
              cpu: 25m
              memory: 100Mi
            limits:
              cpu: "1"
              memory: 1536Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/data/uploads
              name: uploads
      volumes:
        - name: tmp
          emptyDir: {}
        - name: uploads
          persistentVolumeClaim:
            claimName: aqconnecta-uploads-pvc
